# Robokid_Pico_FreeRTOS

./: .gitignore  CMakeLists.txt  File_size.txt  README.md  Stripboard_1.per  a_d_1_010822.xlsx  a_d_2_010822.xlsx  uncrustify.cfg
Documents/: Notes about class project.docx  RP2040_PICO_pinout.xlsx  Robokid_2_technical.docx  ~$bokid_2_technical.docx
Temp/: test1.csv
Veecad/: Stripbaord_2.per  Stripbaord_LED_button.per  Stripboard_1.per
icons/: SSD1306_terminal_font_11x16.lcd  SSD1306_terminal_font_11x16.txt  images.h  robokid_LCD_icons_font_V1.lcd  robokid_LCD_icons_font_V2.lcd  robokid_LCD_icons_font_V2.txt  test.txt  test_font_9x16.lcd
include/: DRV8833_pwm.h  FreeRTOSConfig.h  OLED_128X64.h  Pico_IO.h  Robokid_strings.h  SSD1306.h  TMC7300.h  TMC7300_Fields.h  TMC7300_Registers.h  bitmap.h  common.h  error.h  error_codes.h  font.h  images.h  joystick.h  menus.h  neopixel.h  run_bump_modes.h  run_gamepad_modes.h  run_test_modes.h  sound.h  system.h  tunes.h  tusb_config.h
src/: DRV8833_pwm.c  OLED_128X64.c  Robokid_strings.c  SSD1306.c  TMC7300.c  Task_RW_sensors.c  Task_Robokid.c  Task_blink_LED.c  Task_display_LCD.c  Task_drive_motors.c  Task_error.c  Task_log_system_data.c  Task_neopixels.c  Task_read_gamepad.c  Task_read_sensors.c  Task_serial_output.c  Task_sounder.c  common.c  error.c  gamepad.c  joystick.c  main.c  menus.c  neopixel.c  run_bump_modes.c  run_gamepad_modes.c  run_test_modes.c  tunes.c  tunes.h
